# SeedFlex-Call_insights_with_lambda

./: README.md  chart.py  data.csv  main1.py  query_pg  scores.py
call-insights/: README.md  lambda_function.py  langgraph.json  pyproject.toml
call-insights/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl
call-insights/src/: graph.py  graph2.py  graph3.py  hubspot_test.py
call-insights/src/Fastapi/: main.py
call-insights/src/Tools/: Action_Items_Agent_Tools.py  Ingestion_Agent_Tools.py  Insights_Agent_Tools.py  Key_Points_Agent_Tools.py  Sentiment_Analysis_Agent.py  Speech_Agent_Tools.py  Storage_Agent_Tools.py  Summarization_Agent_Tools.py  Topic_Classification_Agent_Tools.py
call-insights/src/sql/: tables_sql.py
call-insights/src/utils/: openai_utils.py  prompt_templates.py  prompt_templates_optimized.py  rds_utils.py  s3_utils.py
